[tool.poetry]
name = "fastapi-paginator"
version = "0.1.0"
description = ""
authors = ["tjeaneric <ericjohn415@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_paginator"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.98.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
sqlmodel = "^0.0.8"
psycopg2-binary = "^2.9.6"
contextvars = "^2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
